PBSmodelling Changes
====================
2.51  2009-10-23  Rowan
  - Further standardised "SwissTalk" and "swissTalk" to "swisstalk".

2.50  2009-10-19  Alex
  - Finalized User's Guide.
  - Modified 'viewCode' to summarize package functions in four ways.
  - Added environment argument to 'createWin' for search while calling widget callback functions.
  - Fixed 'droplist' bug where values returned by 'getWinVal' aren't correct if droplist's values were changed via 'setWinVal' (after window creation).
  - Added 'setWidgetColor' to dynamically change fg/bg for entry, button, label, radio, check widgets.
  - Created (internal) function '.tclArrayToVector'.

2.21  2009-08-16 Alex
  - Fixed case sensitive issues for runExamples (linux support).
  - Fixed title issue in description file.
  - Added warning when bwidget and tktable tk packages are missing.

2.20  2009-08-07  Alex
  - Inroduced three new widget objects: 'droplist', 'spinbox', 'table'. (These can be demoed via testWidgets().)
  - Fixed read/write list bug fix for array objects (introduced dimnames arg).
  - Modified 'getWinVal' & 'setWinVal' so that they can change label widget text (via new name argument).
  - Converted 'runDemos' to use droplist widget (to allow for packages with many examples which can overflow screen height).
  - Modified widgets so that they can be disabled with 'setWidgetState'.
  - history widget next/prev buttons get disabled when index reaches either end.
  - Modified 'getWinVal' to no longer return factors (converts to character instead).
  - Changed 'object' widget to provide scrollable rows (see rowshow argument).
  - Updated resetGraph.
  - Changed vector labelling behaviour - to only label indexes when no label is given and only one name is given.
  - Introduced 'include' widget for including window description files from other description files.
  - Changed 'history' widget caption (see text and textsize arguments).
  - Enhanced 'openFile' to work on OSX, gnome.
